; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_flushthread.c_insert_tree_extent_skinny.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_flushthread.c_insert_tree_extent_skinny.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_19__ = type { %struct.TYPE_17__, i32 }
%struct.TYPE_17__ = type { i32, i32 }
%struct.TYPE_20__ = type { %struct.TYPE_16__, i32, %struct.TYPE_15__ }
%struct.TYPE_16__ = type { i32 }
%struct.TYPE_15__ = type { i32, i32, i32 }
%struct.TYPE_18__ = type { i32 }

@PagedPool = common dso_local global i32 0, align 4
@ALLOC_TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"out of memory\0A\00", align 1
@EXTENT_ITEM_TREE_BLOCK = common dso_local global i32 0, align 4
@TYPE_TREE_BLOCK_REF = common dso_local global i32 0, align 4
@TYPE_METADATA_ITEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"insert_tree_item returned %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_19__*, i32, i32, i32*, i32, i32, i32*)* @insert_tree_extent_skinny to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @insert_tree_extent_skinny(%struct.TYPE_19__* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_19__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_20__*, align 8
  %18 = alloca %struct.TYPE_18__, align 4
  store %struct.TYPE_19__* %0, %struct.TYPE_19__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %19 = load i32, i32* @PagedPool, align 4
  %20 = load i32, i32* @ALLOC_TAG, align 4
  %21 = call %struct.TYPE_20__* @ExAllocatePoolWithTag(i32 %19, i32 20, i32 %20)
  store %struct.TYPE_20__* %21, %struct.TYPE_20__** %17, align 8
  %22 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %23 = icmp ne %struct.TYPE_20__* %22, null
  br i1 %23, label %26, label %24

24:                                               ; preds = %7
  %25 = call i32 (i8*, ...) @ERR(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %8, align 4
  br label %84

26:                                               ; preds = %7
  %27 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %28 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %27, i32 0, i32 2
  %29 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %28, i32 0, i32 0
  store i32 1, i32* %29, align 4
  %30 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %35 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %34, i32 0, i32 2
  %36 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %35, i32 0, i32 2
  store i32 %33, i32* %36, align 4
  %37 = load i32, i32* @EXTENT_ITEM_TREE_BLOCK, align 4
  %38 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %39 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %38, i32 0, i32 2
  %40 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %39, i32 0, i32 1
  store i32 %37, i32* %40, align 4
  %41 = load i32, i32* @TYPE_TREE_BLOCK_REF, align 4
  %42 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %43 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %42, i32 0, i32 1
  store i32 %41, i32* %43, align 4
  %44 = load i32, i32* %11, align 4
  %45 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %46 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %46, i32 0, i32 0
  store i32 %44, i32* %47, align 4
  %48 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %49 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %50 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %13, align 4
  %53 = load i32, i32* @TYPE_METADATA_ITEM, align 4
  %54 = load i32, i32* %10, align 4
  %55 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %56 = load i32, i32* %14, align 4
  %57 = call i32 @insert_tree_item(%struct.TYPE_19__* %48, i32 %51, i32 %52, i32 %53, i32 %54, %struct.TYPE_20__* %55, i32 20, %struct.TYPE_18__* %18, i32 %56)
  store i32 %57, i32* %16, align 4
  %58 = load i32, i32* %16, align 4
  %59 = call i32 @NT_SUCCESS(i32 %58)
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %66, label %61

61:                                               ; preds = %26
  %62 = load i32, i32* %16, align 4
  %63 = call i32 (i8*, ...) @ERR(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %62)
  %64 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %65 = call i32 @ExFreePool(%struct.TYPE_20__* %64)
  store i32 0, i32* %8, align 4
  br label %84

66:                                               ; preds = %26
  %67 = load i32*, i32** %12, align 8
  %68 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %69 = call i32 @acquire_chunk_lock(i32* %67, %struct.TYPE_19__* %68)
  %70 = load i32*, i32** %12, align 8
  %71 = load i32, i32* %13, align 4
  %72 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %73 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %72, i32 0, i32 0
  %74 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = load i32*, i32** %15, align 8
  %77 = call i32 @space_list_subtract(i32* %70, i32 0, i32 %71, i32 %75, i32* %76)
  %78 = load i32*, i32** %12, align 8
  %79 = load %struct.TYPE_19__*, %struct.TYPE_19__** %9, align 8
  %80 = call i32 @release_chunk_lock(i32* %78, %struct.TYPE_19__* %79)
  %81 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %18, i32 0, i32 0
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @add_parents_to_cache(i32 %82)
  store i32 1, i32* %8, align 4
  br label %84

84:                                               ; preds = %66, %61, %24
  %85 = load i32, i32* %8, align 4
  ret i32 %85
}

declare dso_local %struct.TYPE_20__* @ExAllocatePoolWithTag(i32, i32, i32) #1

declare dso_local i32 @ERR(i8*, ...) #1

declare dso_local i32 @insert_tree_item(%struct.TYPE_19__*, i32, i32, i32, i32, %struct.TYPE_20__*, i32, %struct.TYPE_18__*, i32) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @ExFreePool(%struct.TYPE_20__*) #1

declare dso_local i32 @acquire_chunk_lock(i32*, %struct.TYPE_19__*) #1

declare dso_local i32 @space_list_subtract(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @release_chunk_lock(i32*, %struct.TYPE_19__*) #1

declare dso_local i32 @add_parents_to_cache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
